<resources>
    <string name="app_name">Form_internship</string>
    <string name="form_title">Student Registration Form</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="department">Department</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload Image</string>
    <string-array name="department">
        <item>Computer science</item>
        <item>Marketing</item>
        <item>Accounting</item>
    </string-array>

</resources>
